# Big-Data-Mort

./: .gitignore  README.md  SETUP.md  carte.py  common.py  death.py  download.py  esperance.py  parse_deces.py  pyproject.toml  repartition_ages.py  runAll.sh  test_parquet.py  txt_to_parquet.py
BIG-DATA-MORT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ensta_bigdata_teaching_lab3.egg-info/: PKG-INFO  SOURCES.txt
