[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensta-bigdata-teaching-lab3"
version = "0.1.0"
description = "UE Big Data - ENSTA 2025 - Lab 3"
authors = [
    { name = "Guillaume Desforges", email = "guillaume.desforges@ensta-paris.fr" },
]
dependencies = ["pyspark", "altair"]

[tool.setuptools]
py-modules = ["lab3"]
